fixed scent (i am the dumbest human alive)